--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
