--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>3.2.3.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test-autoconfigure</artifactId>
             <version>3.1.4</version>
