Added Junit tests

--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
                 <version>2.2.224</version>
                 <!-- Change the scope to runtime if you intend to use H2 as your main database -->
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
 </project>
