--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Download Dependencies with Maven
       run: mvn clean install -DskipTests
     - name: Package with Maven
-      run: mvn -B package -DskipTests --file pom.xml
+      run: mvn -B package
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
    # - name: Update dependency graph
